<resources>
    <string name="app_name">DemoProject</string>
    <string name="dashboard">DashBoard</string>
    <string name="single_data_display">Single Data Display</string>
    <string name="are_you_sre_to_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_record_found">No Record Found</string>
    <string name="insert_data">Insert Data</string>
    <string name="sync_data">Sync Data</string>
    <string name="please_check_internet">Please check internet connection</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="insert_name">Insert Name</string>
    <string name="insert_description">Insert Description</string>
    <string name="insert_record">Demo Project</string>
    <string name="please_enter_name">Please Enter Name</string>
    <string name="please_enter_description">Please Enter Description</string>
    <string name="recored_inserted_sucessfully">Record inserted sucessfully</string>
</resources>
