<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ractangle_white_border">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ractangle_white_border"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingBottom="05dp"
            android:paddingTop="05dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/tv_dialog_title_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_weight="0.8"
                android:padding="10dp"
                android:text="@string/insert_record"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_close_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".1"
                android:padding="10dp"
                android:src="@mipmap/close_img" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_dialog_insert_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:gravity="top|left"
                android:hint="@string/insert_name"
                android:inputType="textCapWords|textMultiLine|textImeMultiLine|textCapSentences"
                android:maxLength="255"
                android:padding="10dp"
                android:scrollHorizontally="false"
                android:scrollbars="vertical"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:visibility="visible" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/grey"></View>


            <EditText
                android:id="@+id/et_dialog_insert_description"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:gravity="top|left"
                android:hint="@string/insert_description"
                android:inputType="textCapWords|textMultiLine|textImeMultiLine|textCapSentences"
                android:lines="5"
                android:maxLength="255"
                android:maxLines="5"
                android:padding="10dp"
                android:scrollHorizontally="false"
                android:scrollbars="vertical"
                android:singleLine="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_save_close"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/rr_save_close_"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <Button
                    android:id="@+id/btn_dialog_insert_record"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/add"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_dialog_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:background="@color/grey"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>