<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ligthGray">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/app_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ligthGray"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/cv_main_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <view
                    android:id="@+id/rv_all_data"
                    class="android.support.v7.widget.RecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


                <RelativeLayout
                    android:id="@+id/rr_no_data_found"
                    android:layout_width="fill_parent"
                    android:layout_height="180dp"
                    android:background="@android:color/transparent">

                    <TextView
                        android:id="@+id/tv_no_data_found"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:text="@string/no_record_found"
                        android:textColor="@color/black"
                        android:textSize="12dp"
                        android:visibility="gone" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/view_blur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_semi_transparent"
        android:visibility="visible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp">

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/multiple_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            fab:fab_addButtonColorNormal="@color/colorPrimaryDark"
            fab:fab_addButtonColorPressed="@color/colorPrimaryDark"
            fab:fab_colorPressed="@color/colorPrimaryDark"
            fab:fab_labelStyle="@style/menu_labels_style">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_sync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/colorPrimaryDark"
                fab:fab_colorPressed="@color/colorPrimaryDark"
                fab:fab_icon="@mipmap/expense"
                fab:fab_title="@string/sync_data" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_insert_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/colorPrimaryDark"
                fab:fab_colorPressed="@color/colorPrimaryDark"
                fab:fab_icon="@mipmap/income"
                fab:fab_title="@string/insert_data" />

        </com.getbase.floatingactionbutton.FloatingActionsMenu>
    </RelativeLayout>


</RelativeLayout>